# menteviva

./: .gitignore  CLAUDE.md  FIREBASE_SETUP.md  MenteViva_DocumentoFuncional_v2.docx  MenteViva_Gral.xlsx  MenteViva_Infografia_v2.html  PLAN_BACKEND.txt  TESTING_REPORT.md  avatar-research.md  deploy.sh  docker-compose.dev.yml  ejemplo de edge tts.py  install.bat  plan.txt  roadmap.md  session-status-2026-04-27.md  start.bat  stop.bat
docs/: CondorIC_GuionVentaConsultiva_v1.docx  DEPLOY_PILOTO.md  MenteViva_CAT01_Cientifico_.docx  PLAN_FRONTEND.txt  (+5 more)
menteviva-backend/: .env.example  .gitignore  pyproject.toml
menteviva-backend/app/: __init__.py  __main__.py  config.py  db.py  main.py
menteviva-backend/app/models/: __init__.py  avatar.py  message.py  session.py  user_profile.py
menteviva-backend/app/prompts/: __init__.py  entrevistador.py  entrevistador_prompt.md  roberto.py  roberto_avanzado.md  roberto_base.md  roberto_intermedio.md  roberto_principiante.md  roberto_prompt.md  scenarios.py
menteviva-backend/app/routers/: __init__.py  auth.py  avatars.py  conversation.py  profiles.py  sessions.py
menteviva-backend/app/services/: __init__.py  analysis.py  edge_tts.py  firebase_auth.py  groq_llm.py  groq_pool.py  groq_whisper.py  session_repo.py  user_repo.py
menteviva-backend/scripts/: generate_greetings.py  inject_test_diagnostic.py  inspect_users.py  test_chat_smoke.py  test_db_migrator.py  test_firebase_init.py  test_pivot.py  test_roberto_condor.py  test_roberto_levels.py  test_roberto_long_session.py  test_session_repo.py  test_tool_glitch_detector.py
(+72 files in other folders)
