[tool.poetry]
name = "menteviva-backend"
version = "0.1.0"
description = "Backend para Mente Viva - Entrenamiento de soft skills con IA"
authors = ["Eric V."]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
groq = "^0.11.0"
elevenlabs = "^1.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.4.0"
python-multipart = "^0.0.12"
websockets = "^13.0"
aiosqlite = "^0.22.1"
firebase-admin = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
